# damn-vulnerable-rust-app

./: .gitignore  BENCHMARK.md  README.md  rust-security-code-review-canonical_1.md
dvra-1/: .dockerignore  README.md  build.rs
dvra-1/docs/: completeness.md  instructor-guide.md  parity-with-dvra-2.md  verification.md
dvra-1/infrastructure/: Dockerfile  compose.yaml
dvra-1/instructor-oracle/: ANSWER_KEY.md  MANIFEST.toml
dvra-1/scenarios/public/: index.toml
dvra-1/source/: Cargo.toml  README.md  build.rs
dvra-1/source/fuzz/: Cargo.toml
dvra-1/source/fuzz/fuzz_targets/: parser_equivalence.rs  route.rs
dvra-1/source/src/: db.rs  ffi_shim.c  lib.rs  main.rs
dvra-1/source/src/features/: auth.rs  collect.rs  concurrency.rs  dedup.rs  documents.rs  ffi.rs  file_download.rs  framing.rs  header_parse.rs  hooks.rs  mod.rs  native.rs  nested.rs  profile.rs  proxy.rs  records.rs  upload.rs  user_search.rs  validation.rs
dvra-1/tools/: dvra1
dvra-2/: .dockerignore  .gitignore  Cargo.toml  README.md
dvra-2/.github/workflows/: ci.yml
dvra-2/apps/api/: Cargo.toml
dvra-2/apps/api/src/: lib.rs  main.rs
dvra-2/apps/mock-metadata-service/: Cargo.toml
dvra-2/apps/mock-metadata-service/src/: main.rs
dvra-2/apps/worker/: Cargo.toml
dvra-2/apps/worker/src/: main.rs
dvra-2/configs/: operator-safe.yaml  tenant-vulnerable.yaml
dvra-2/crates/auth/: Cargo.toml
dvra-2/crates/auth/src/: lib.rs
dvra-2/crates/binary-parser/: Cargo.toml
dvra-2/crates/binary-parser/src/: lib.rs
dvra-2/crates/config/: Cargo.toml
dvra-2/crates/config/src/: lib.rs
dvra-2/crates/scenario-model/: Cargo.toml
dvra-2/crates/scenario-model/src/: lib.rs
dvra-2/crates/unsafe-cache/: Cargo.toml
dvra-2/crates/unsafe-cache/src/: lib.rs
dvra-2/crates/worker-engine/: Cargo.toml
dvra-2/crates/worker-engine/src/: lib.rs
dvra-2/docs/: benchmark-oracle.md  completeness.md  instructor-guide.md  private-oracle.md  private-oracle.schema.example.yaml  qa.md  threat-models.md  verification.md
dvra-2/fuzz/: Cargo.toml
dvra-2/fuzz/fuzz_targets/: dvra_006_differential.rs
dvra-2/fuzz/seeds/dvra-006/: escaped-delimiter.dvra
dvra-2/infrastructure/: compose.yaml
dvra-2/infrastructure/containers/: Dockerfile  miri.Dockerfile
dvra-2/infrastructure/seccomp/: README.md
dvra-2/instructor-oracle/: scenarios.yaml
dvra-2/labs/compiler-soundness/: README.md
dvra-2/labs/rudra-patterns/: README.md
dvra-2/labs/stdlib-archaeology/: README.md
dvra-2/labs/vulnerable-dependencies/: README.md
dvra-2/scenarios/fixtures/parser/: basic.dvra
dvra-2/scenarios/public/: DVRA-001.yaml  DVRA-004.yaml  DVRA-006.yaml  DVRA-008.yaml  DVRA-009.yaml  DVRA-013.yaml  DVRA-014.yaml
dvra-2/tools/: miri-reproduce.sh
dvra-2/tools/labctl/: Cargo.toml
dvra-2/tools/labctl/src/: main.rs
dvra-3/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml
dvra-3-blind/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md
dvra-3-blind/apps/api/src/: main.rs
dvra-3-blind/apps/metadata-service/src/: main.rs
dvra-3-blind/config/: dvra-container.toml  dvra.toml
dvra-3-blind/crates/bundle/: Cargo.toml
dvra-3-blind/crates/bundle/src/: lib.rs
dvra-3-blind/crates/config/src/: lib.rs
dvra-3-blind/crates/core/: Cargo.toml
dvra-3-blind/crates/core/src/: lib.rs
dvra-3-blind/crates/fetch/src/: lib.rs
dvra-3-blind/crates/parser/: Cargo.toml
dvra-3-blind/crates/parser/src/: lib.rs
dvra-3-blind/crates/unsafe-cache/src/: lib.rs
dvra-3-blind/infrastructure/: compose.ssrf.yaml  compose.yaml
dvra-3/.github/workflows/: ci.yml
dvra-3/apps/api/: Cargo.toml
dvra-3/apps/api/src/: main.rs
dvra-3/apps/metadata-service/: Cargo.toml
dvra-3/config/: dvra-container.toml  dvra.toml
dvra-3/crates/bundle/src/: lib.rs
dvra-3/crates/config/: Cargo.toml
dvra-3/crates/config/src/: lib.rs
dvra-3/crates/core/src/: lib.rs
dvra-3/crates/fetch/: Cargo.toml
dvra-3/crates/fetch/src/: lib.rs
dvra-3/crates/parser/src/: lib.rs
dvra-3/crates/unsafe-cache/: Cargo.toml
dvra-3/crates/unsafe-cache/src/: lib.rs
dvra-3/docs/: API.md  DESIGN.md  ROADMAP.md  SCORING.md
dvra-3/fuzz/: Cargo.toml
dvra-3/fuzz/fuzz_targets/: differential_parser.rs
dvra-3/infrastructure/: Dockerfile  compose.ssrf.yaml  compose.yaml
dvra-3/instructor-oracle/: scenarios.yaml
dvra-3/labs/: README.md
dvra-3/labs/compiler-soundness/: README.md
dvra-3/labs/stdlib-archaeology/: README.md
dvra-3/labs/vulnerable-dependencies/: README.md
dvra-3/scenarios/fixtures/: DVRA-008-safe.dvb  DVRA-008-traversal.dvb
dvra-3/scenarios/public/: DVRA-001.md  DVRA-002.md  DVRA-003.md  DVRA-004.md  DVRA-005.md  DVRA-006.md  DVRA-007.md  DVRA-008.md  DVRA-009.md
dvra-3/scripts/: labctl  verify-layout.py
tools/: dvra-docker
tools/make-blind/: make_blind.py
