[workspace]
resolver = "2"
members = [
    "apps/api",
    "apps/mock-metadata-service",
    "apps/worker",
    "crates/auth",
    "crates/binary-parser",
    "crates/config",
    "crates/scenario-model",
    "crates/unsafe-cache",
    "crates/worker-engine",
    "tools/labctl",
]
exclude = [
    "fuzz",
    "labs/compiler-soundness",
    "labs/stdlib-archaeology",
    "labs/vulnerable-dependencies",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.86"
version = "0.1.0"

[workspace.dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
loom = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(miri)'] }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
undocumented_unsafe_blocks = "warn"
