[workspace]
members = [
    "apps/api",
    "apps/metadata-service",
    "crates/core",
    "crates/fetch",
    "crates/config",
    "crates/bundle",
    "crates/parser",
    "crates/unsafe-cache",
]
exclude = [
]
resolver = "2"

[workspace.package]
version = "0.2.0-alpha.2"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
loom = "0.7"
reqwest = { version = "=0.12.15", default-features = false, features = ["rustls-tls"] }
url = "=2.5.4"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"
missing_safety_doc = "deny"
