[package]
name = "dvra-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
dvra-parser = { path = "../crates/parser" }

[[bin]]
name = "differential_parser"
path = "fuzz_targets/differential_parser.rs"
test = false
doc = false
bench = false
