[package]
name = "dvra-api"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
dvra-auth = { path = "../../crates/auth" }
dvra-binary-parser = { path = "../../crates/binary-parser" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tower.workspace = true

[lints]
workspace = true
