[package]
name = "dvra-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dvra-config = { path = "../../crates/config" }
dvra-bundle = { path = "../../crates/bundle" }
dvra-core = { path = "../../crates/core" }
dvra-fetch = { path = "../../crates/fetch" }
dvra-parser = { path = "../../crates/parser" }

[lints]
workspace = true
